manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rewayaat
  labels:
    app: rewayaat
  namespace: rewayaat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rewayaat
  template:
    metadata:
      labels:
        app: rewayaat
    spec:
      containers:
        - name: rewayaat
          image: $IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 30
