manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rewayaat
  namespace: rewayaat
  labels:
    app.kubernetes.io/component: rewayaat
spec:
  type: ClusterIP
  selector:
    app: rewayaat
  ports:
    - port: 8080
      targetPort: 8080
      name: web
    - port: 8081
      targetPort: 8081
      name: metrics
